<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/wrapTwoSide"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollViewInputData"
                android:layout_above="@+id/buttonNextToSignature">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <com.example.samudra.guestbook.ui.textview.PacificoTextView
                        android:id="@+id/welcome_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nice_to_meet_you"
                        android:textSize="40sp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:padding="@dimen/activity_vertical_margin"/>

                    <LinearLayout
                        android:layout_below="@+id/welcome_text"
                        android:id="@+id/firstLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_vertical_margin">

                        <com.example.samudra.guestbook.ui.textview.PacificoTextView
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/label_size_phone"
                            android:text="@string/whats_your_name"
                            android:id="@+id/label_name"/>
                        <EditText
                            android:id="@+id/guest_name"
                            android:singleLine="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/whats_your_name_hint"
                            android:textColorHint="@color/colorPlaceholder"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginTop="10dp"
                            android:padding="7dp"
                            android:background="@drawable/bottom_border"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/secondLine"
                        android:layout_below="@+id/firstLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_marginTop="10dp">

                        <com.example.samudra.guestbook.ui.textview.PacificoTextView
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/label_size_phone"
                            android:text="@string/for_who_do_you_work"
                            android:id="@+id/label_company"/>
                        <EditText
                            android:id="@+id/guest_company"
                            android:singleLine="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/for_who_do_you_work_hint"
                            android:textColorHint="@color/colorPlaceholder"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginTop="10dp"
                            android:padding="7dp"
                            android:background="@drawable/bottom_border"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/thirdLine"
                        android:layout_below="@+id/secondLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_marginTop="10dp">

                        <com.example.samudra.guestbook.ui.textview.PacificoTextView
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/label_size_phone"
                            android:text="@string/do_your_have_phone_number"
                            android:id="@+id/label_phone"/>
                        <EditText
                            android:id="@+id/guest_phone"
                            android:singleLine="true"
                            android:inputType="phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/do_your_have_phone_number_hint"
                            android:textColorHint="@color/colorPlaceholder"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginTop="10dp"
                            android:padding="7dp"
                            android:background="@drawable/bottom_border"/>


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/fourthLine"
                        android:layout_below="@+id/thirdLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_marginTop="10dp">

                        <com.example.samudra.guestbook.ui.textview.PacificoTextView
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/label_size_phone"
                            android:text="@string/needs"
                            android:id="@+id/label_needs"/>
                        <EditText
                            android:id="@+id/guest_needs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/needs_hint"
                            android:textColorHint="@color/colorPlaceholder"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginTop="10dp"
                            android:padding="7dp"
                            android:background="@drawable/bottom_border"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/fifthLine"
                        android:layout_below="@+id/fourthLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_marginTop="10dp">

                        <com.example.samudra.guestbook.ui.textview.PacificoTextView
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/label_size_phone"
                            android:text="@string/rack_no"
                            android:id="@+id/label_rack"/>
                        <EditText
                            android:id="@+id/guest_rack"
                            android:singleLine="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/rack_no_hint"
                            android:textColorHint="@color/colorPlaceholder"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginTop="10dp"
                            android:padding="7dp"
                            android:background="@drawable/bottom_border"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/sixthLine"
                        android:layout_below="@+id/fifthLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_marginTop="10dp">

                        <com.example.samudra.guestbook.ui.textview.PacificoTextView
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/label_size_phone"
                            android:text="@string/badge_no"
                            android:id="@+id/label_badge"/>
                        <EditText
                            android:id="@+id/guest_badge"
                            android:singleLine="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/badge_no_hint"
                            android:textColorHint="@color/colorPlaceholder"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginTop="10dp"
                            android:padding="7dp"
                            android:background="@drawable/bottom_border"/>
                    </LinearLayout>


                </RelativeLayout>

            </ScrollView>

            <com.example.samudra.guestbook.ui.textview.PacificoButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorAccent"
                android:text="@string/next"
                android:padding="@dimen/activity_vertical_margin"
                android:id="@+id/buttonNextToSignature"/>
        </RelativeLayout>

    </LinearLayout>






</RelativeLayout>