<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/wrapSignature"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/wrapButtonSignature">
        <TextView
            android:id="@+id/signBelow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/please_sign_below"/>
        <RelativeLayout
            android:layout_below="@id/signBelow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/signaturePlace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            </LinearLayout>
            <TextView
                android:layout_below="@id/signaturePlace"
                android:id="@+id/guestName"
                android:gravity="bottom"
                android:layout_marginBottom="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="(      John Doe     )"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_alignBottom="@+id/signaturePlace"
                android:layout_alignTop="@+id/signaturePlace"
                android:layout_alignLeft="@+id/signaturePlace"
                android:layout_alignRight="@+id/signaturePlace"/>
        </RelativeLayout>


    </RelativeLayout>
    <LinearLayout
        android:id="@+id/wrapButtonSignature"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_weight="1"
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:text="@string/clear"/>
        <Button
            android:layout_weight="1"
            android:id="@+id/getsign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:text="@string/take_picture"/>
    </LinearLayout>

</RelativeLayout>